Added self-learning comments.

--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -3,3 +3,4 @@ $theme-colors: (
 );
 
 @import '../../../node_modules/bootstrap/scss/bootstrap.scss'; // CSS imports are in the app.scss file. Remove this to get rid of Bootstrap.
+// Note that app.scss is imported by index.tsx - that's where we tell Webpack this is a dependency of our project. When it reaches this file it adds app.scss to the dependency tree and then adds bootstrap.scss, which we're importing with scss syntax.
